<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_api">
        <Preference
            android:key="pref_api_key"
            android:title="@string/pref_api_key_title"
            android:summary="@string/pref_api_key_summary"
            android:icon="@drawable/rounded_settings_24" />
        <Preference
            android:key="pref_tmdb_credential"
            android:title="@string/pref_tmdb_key_title"
            android:summary="@string/pref_tmdb_key_summary"
            android:icon="@drawable/rounded_settings_24" />
    </PreferenceCategory>

    <PreferenceCategory app:title="TorBox">
        <Preference
            android:key="pref_torbox_key"
            android:title="TorBox API key"
            android:summary="Full-speed downloads &amp; streaming via your TorBox account"
            android:icon="@drawable/rounded_settings_24" />
        <Preference
            android:key="pref_torbox_library"
            android:title="TorBox library"
            android:summary="Browse, stream, download or delete torrents in your account"
            android:icon="@drawable/rounded_download_24" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_storage">
        <Preference
            android:key="pref_save_dir"
            android:title="@string/pref_save_dir_title"
            android:icon="@drawable/rounded_download_24" />
        <Preference
            android:key="pref_clear_cache"
            android:title="@string/pref_clear_cache_title"
            android:summary="@string/pref_clear_cache_summary"
            android:icon="@drawable/rounded_delete_24" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_streaming">
        <ListPreference
            android:key="pref_default_quality"
            android:title="@string/pref_default_quality_title"
            android:entries="@array/quality_entries"
            android:entryValues="@array/quality_values"
            android:defaultValue="any"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="pref_verified_only"
            android:title="@string/pref_verified_only_title"
            android:summary="@string/pref_verified_only_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_delete_on_remove"
            android:title="@string/pref_remove_files_title"
            android:summary="@string/pref_remove_files_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_auto_resume"
            android:title="@string/pref_auto_resume_title"
            android:summary="@string/pref_auto_resume_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_about">
        <Preference
            android:key="pref_check_updates"
            android:title="@string/pref_check_updates_title"
            android:icon="@drawable/rounded_download_24" />
        <Preference
            android:key="pref_version"
            android:title="@string/pref_version_title"
            android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
