<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/discoverFragment">

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.vikas.torrentplayer.ui.discover.DiscoverFragment"
        android:label="@string/nav_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.vikas.torrentplayer.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/downloadsFragment"
        android:name="com.vikas.torrentplayer.ui.downloads.DownloadsFragment"
        android:label="@string/nav_downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.vikas.torrentplayer.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
